--- a/3.0-data-explorating.ipynb
+++ b/3.0-data-explorating.ipynb
@@ -438,7 +438,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. Độ tuổi tham gia khảo sát là bao nhiêu ? Hãy vẽ biểu đồ histogram và chọn bins là bao nhiêu. Tại sao lại chọn bins như vậy?**"
+    "<div style=\"border-radius: 10px; border: 2px solid #51F9F4; padding: 15px; background-color:#c2eeec; font-size: 100%; text-align: left;\">\n",
+    "    \n",
+    "<font size=\"+1\" color=#215C67><b>1. Độ tuổi tham gia khảo sát là bao nhiêu ? Hãy vẽ biểu đồ histogram và chọn bins là bao nhiêu. Tại sao lại chọn bins như vậy?</b></font>\n",
+    "\n",
+    "<font color=\"red\"><b>Answer:</b></font> <font color=\"red\">Câu trả lời</font>\n",
+    "\n",
+    "<font color=\"red\"><b>Explanation:</b></font> <font color=\"red\">Giải thích </font>\n"
    ]
   },
   {
@@ -538,7 +544,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2. Tìm hiểu về dịch vụ nghe nhạc được ưa thích nhất ?**"
+    "<div style=\"border-radius: 10px; border: 2px solid #51F9F4; padding: 15px; background-color:#c2eeec; font-size: 100%; text-align: left;\">\n",
+    "    \n",
+    "<font size=\"+1\" color=#215C67><b>2. Tìm hiểu về dịch vụ nghe nhạc được ưa thích nhất ?</b></font>\n",
+    "\n",
+    "<font color=\"red\"><b>Answer:</b></font> <font color=\"red\">Câu trả lời</font>\n",
+    "\n",
+    "<font color=\"red\"><b>Explanation:</b></font> <font color=\"red\">Giải thích </font>\n",
+    "</div>\n"
    ]
   },
   {
@@ -625,7 +638,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3. Tìm hiểu số giờ nghe của người tham gia khảo sát ?**"
+    "<div style=\"border-radius: 10px; border: 2px solid #51F9F4; padding: 15px; background-color:#c2eeec; font-size: 100%; text-align: left;\">\n",
+    "    \n",
+    "<font size=\"+1\" color=#215C67><b>3. Tìm hiểu số giờ nghe của người tham gia khảo sát ?  </b></font>\n",
+    "\n",
+    "<font color=\"red\"><b>Answer:</b></font> <font color=\"red\">Câu trả lời</font>\n",
+    "\n",
+    "<font color=\"red\"><b>Explanation:</b></font> <font color=\"red\">Giải thích </font>\n",
+    "\n",
+    "</div>"
    ]
   },
   {
