--- a/2.0-pre-processing.ipynb
+++ b/2.0-pre-processing.ipynb
@@ -339,6 +339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Kiểu dữ liệu của các cột đã đúng với kiểu dữ liệu mong muốn của nhóm nên sẽ không cần xử lí thêm về phần này"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1050,7 +1057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Nhóm nhận thấy dữ liệu trong các cột Frequency* là kiểu dữ liệu phân loại thứ tự có các mức ['Never', 'Sometimes', 'Rarely', 'Very frequently'] nên nhóm sẽ chuyển các giá trị này về giá trị số tương ứng từ 1 đến 4"
+    "- Nhóm nhận thấy dữ liệu trong các cột Frequency* là kiểu dữ liệu phân loại thứ tự có các mức ['Never', 'Sometimes', 'Rarely', 'Very frequently'] nên nhóm sẽ chuyển các giá trị này về giá trị số tương ứng từ 0 đến 3"
    ]
   },
   {
@@ -1276,7 +1283,7 @@
     "# Chuyển dữ liệu trong các cột Frequency* thành dạng số tương ứng\n",
     "for col in df.columns:\n",
     "    if col.startswith('Frequency'):\n",
-    "        df[col] = df[col].map({'Never': 1, 'Rarely': 2, 'Sometimes': 3, 'Very frequently': 4})\n",
+    "        df[col] = df[col].map({'Never': 0, 'Rarely': 1, 'Sometimes': 2, 'Very frequently': 3})\n",
     "df.head()\n"
    ]
   },
