Không cập nhật gì

--- a/3.0-data-explorating.ipynb
+++ b/3.0-data-explorating.ipynb
@@ -668,7 +668,7 @@
    ],
    "source": [
     "# Vẽ biểu đồ histogram cho biết phân bố của dữ liệu Hours per day \n",
-    "df.hist(['Hours per day'], bins='auto', color = 'cyan', density=True, grid=False)\n"
+    "df.hist(['Hours per day'], bins='auto', density=True, grid=False)\n"
    ]
   }
  ],
