--- a/2.0-pre-processing.ipynb
+++ b/2.0-pre-processing.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "Frequency [Hip hop]                       0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "(718, 31)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
        "[11 rows x 31 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
        "[113 rows x 31 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1974,7 @@
        "[113 rows x 82 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2202,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2241,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2295,7 @@
        "(658, 31)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2342,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2364,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2377,12 +2377,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "=> Vậy các mức độ tâm thần được đánh giá từ 1-10 được làm trón đến 0.5. Nên kiểu dữ liệu của các cột này vẫn là float."
+    "=> Vậy các mức độ tâm thần được đánh giá từ 1-10 được làm trón đến 0.5. Điều này sẽ khó khăn cho việc phân tích đây là biến phân loại hay số. Thêm vào đó theo như tác giả 0 đại diện cho \"Tôi đã từng trải qua\" và 10 đại diện cho \"Tôi  trải qua cực kỳ nhiều\" nhưng trong dữ liệu lại có giá trị 0.5. Vì vậy nhóm quyết định sẽ làm tròn các giá trị này lên số nguyên từ 0-10."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anxiety\n",
+      "0      29\n",
+      "1      28\n",
+      "2      42\n",
+      "3      61\n",
+      "4      47\n",
+      "5      52\n",
+      "6      81\n",
+      "7     109\n",
+      "8     104\n",
+      "9      47\n",
+      "10     58\n",
+      "Name: count, dtype: int64\n",
+      "Depression\n",
+      "0     73\n",
+      "1     38\n",
+      "2     83\n",
+      "3     53\n",
+      "4     55\n",
+      "5     54\n",
+      "6     80\n",
+      "7     87\n",
+      "8     70\n",
+      "9     33\n",
+      "10    32\n",
+      "Name: count, dtype: int64\n",
+      "Insomnia\n",
+      "0     136\n",
+      "1      77\n",
+      "2      77\n",
+      "3      62\n",
+      "4      56\n",
+      "5      48\n",
+      "6      55\n",
+      "7      55\n",
+      "8      45\n",
+      "9      21\n",
+      "10     26\n",
+      "Name: count, dtype: int64\n",
+      "OCD\n",
+      "0     222\n",
+      "1      86\n",
+      "2      87\n",
+      "3      58\n",
+      "4      45\n",
+      "5      46\n",
+      "6      31\n",
+      "7      29\n",
+      "8      22\n",
+      "9      13\n",
+      "10     19\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "mental_health = ['Anxiety', 'Depression', 'Insomnia', 'OCD']\n",
+    "# Làm tròn các giá trị lên số nguyên gần nhất nhưng không vượt quá 10\n",
+    "for col in mental_health:\n",
+    "    df[col] = [min(round(x), 10) for x in df[col]]\n",
+    "    \n",
+    "df[mental_health] = df[mental_health].astype('int64')\n",
+    "# Kiểm tra lại value_counts của 4 loại bệnh\n",
+    "for col in mental_health:\n",
+    "    print(df[col].value_counts().sort_index())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2403,7 +2479,7 @@
        "Name: count, Length: 121, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2414,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2441,7 +2517,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2459,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2469,40 +2545,40 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 658 entries, 2 to 735\n",
       "Data columns (total 31 columns):\n",
-      " #   Column                        Non-Null Count  Dtype  \n",
-      "---  ------                        --------------  -----  \n",
-      " 0   Age                           658 non-null    int64  \n",
-      " 1   Primary streaming service     658 non-null    object \n",
-      " 2   Hours per day                 658 non-null    int64  \n",
-      " 3   While working                 658 non-null    object \n",
-      " 4   Instrumentalist               658 non-null    object \n",
-      " 5   Composer                      658 non-null    object \n",
-      " 6   Fav genre                     658 non-null    object \n",
-      " 7   Exploratory                   658 non-null    object \n",
-      " 8   Foreign languages             658 non-null    object \n",
-      " 9   BPM                           658 non-null    int64  \n",
-      " 10  Frequency [Classical]         658 non-null    object \n",
-      " 11  Frequency [Country]           658 non-null    object \n",
-      " 12  Frequency [EDM]               658 non-null    object \n",
-      " 13  Frequency [Folk]              658 non-null    object \n",
-      " 14  Frequency [Gospel]            658 non-null    object \n",
-      " 15  Frequency [Hip hop]           658 non-null    object \n",
-      " 16  Frequency [Jazz]              658 non-null    object \n",
-      " 17  Frequency [K pop]             658 non-null    object \n",
-      " 18  Frequency [Latin]             658 non-null    object \n",
-      " 19  Frequency [Lofi]              658 non-null    object \n",
-      " 20  Frequency [Metal]             658 non-null    object \n",
-      " 21  Frequency [Pop]               658 non-null    object \n",
-      " 22  Frequency [R&B]               658 non-null    object \n",
-      " 23  Frequency [Rap]               658 non-null    object \n",
-      " 24  Frequency [Rock]              658 non-null    object \n",
-      " 25  Frequency [Video game music]  658 non-null    object \n",
-      " 26  Anxiety                       658 non-null    float64\n",
-      " 27  Depression                    658 non-null    float64\n",
-      " 28  Insomnia                      658 non-null    float64\n",
-      " 29  OCD                           658 non-null    float64\n",
-      " 30  Music effects                 658 non-null    object \n",
-      "dtypes: float64(4), int64(3), object(24)\n",
+      " #   Column                        Non-Null Count  Dtype \n",
+      "---  ------                        --------------  ----- \n",
+      " 0   Age                           658 non-null    int64 \n",
+      " 1   Primary streaming service     658 non-null    object\n",
+      " 2   Hours per day                 658 non-null    int64 \n",
+      " 3   While working                 658 non-null    object\n",
+      " 4   Instrumentalist               658 non-null    object\n",
+      " 5   Composer                      658 non-null    object\n",
+      " 6   Fav genre                     658 non-null    object\n",
+      " 7   Exploratory                   658 non-null    object\n",
+      " 8   Foreign languages             658 non-null    object\n",
+      " 9   BPM                           658 non-null    int64 \n",
+      " 10  Frequency [Classical]         658 non-null    object\n",
+      " 11  Frequency [Country]           658 non-null    object\n",
+      " 12  Frequency [EDM]               658 non-null    object\n",
+      " 13  Frequency [Folk]              658 non-null    object\n",
+      " 14  Frequency [Gospel]            658 non-null    object\n",
+      " 15  Frequency [Hip hop]           658 non-null    object\n",
+      " 16  Frequency [Jazz]              658 non-null    object\n",
+      " 17  Frequency [K pop]             658 non-null    object\n",
+      " 18  Frequency [Latin]             658 non-null    object\n",
+      " 19  Frequency [Lofi]              658 non-null    object\n",
+      " 20  Frequency [Metal]             658 non-null    object\n",
+      " 21  Frequency [Pop]               658 non-null    object\n",
+      " 22  Frequency [R&B]               658 non-null    object\n",
+      " 23  Frequency [Rap]               658 non-null    object\n",
+      " 24  Frequency [Rock]              658 non-null    object\n",
+      " 25  Frequency [Video game music]  658 non-null    object\n",
+      " 26  Anxiety                       658 non-null    int64 \n",
+      " 27  Depression                    658 non-null    int64 \n",
+      " 28  Insomnia                      658 non-null    int64 \n",
+      " 29  OCD                           658 non-null    int64 \n",
+      " 30  Music effects                 658 non-null    object\n",
+      "dtypes: int64(7), object(24)\n",
       "memory usage: 164.5+ KB\n"
      ]
     }
@@ -2524,7 +2600,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 658 entries, 2 to 735\n",
+      "Data columns (total 31 columns):\n",
+      " #   Column                        Non-Null Count  Dtype \n",
+      "---  ------                        --------------  ----- \n",
+      " 0   Age                           658 non-null    int64 \n",
+      " 1   Primary streaming service     658 non-null    object\n",
+      " 2   Hours per day                 658 non-null    int64 \n",
+      " 3   While working                 658 non-null    object\n",
+      " 4   Instrumentalist               658 non-null    object\n",
+      " 5   Composer                      658 non-null    object\n",
+      " 6   Fav genre                     658 non-null    object\n",
+      " 7   Exploratory                   658 non-null    object\n",
+      " 8   Foreign languages             658 non-null    object\n",
+      " 9   BPM                           658 non-null    int64 \n",
+      " 10  Frequency [Classical]         658 non-null    object\n",
+      " 11  Frequency [Country]           658 non-null    object\n",
+      " 12  Frequency [EDM]               658 non-null    object\n",
+      " 13  Frequency [Folk]              658 non-null    object\n",
+      " 14  Frequency [Gospel]            658 non-null    object\n",
+      " 15  Frequency [Hip hop]           658 non-null    object\n",
+      " 16  Frequency [Jazz]              658 non-null    object\n",
+      " 17  Frequency [K pop]             658 non-null    object\n",
+      " 18  Frequency [Latin]             658 non-null    object\n",
+      " 19  Frequency [Lofi]              658 non-null    object\n",
+      " 20  Frequency [Metal]             658 non-null    object\n",
+      " 21  Frequency [Pop]               658 non-null    object\n",
+      " 22  Frequency [R&B]               658 non-null    object\n",
+      " 23  Frequency [Rap]               658 non-null    object\n",
+      " 24  Frequency [Rock]              658 non-null    object\n",
+      " 25  Frequency [Video game music]  658 non-null    object\n",
+      " 26  Anxiety                       658 non-null    int64 \n",
+      " 27  Depression                    658 non-null    int64 \n",
+      " 28  Insomnia                      658 non-null    int64 \n",
+      " 29  OCD                           658 non-null    int64 \n",
+      " 30  Music effects                 658 non-null    object\n",
+      "dtypes: int64(7), object(24)\n",
+      "memory usage: 164.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2573,9 +2703,9 @@
        "      <td>25.057751</td>\n",
        "      <td>3.048632</td>\n",
        "      <td>122.18541</td>\n",
-       "      <td>5.815350</td>\n",
-       "      <td>4.738602</td>\n",
-       "      <td>3.654255</td>\n",
+       "      <td>5.816109</td>\n",
+       "      <td>4.740122</td>\n",
+       "      <td>3.655015</td>\n",
        "      <td>2.607903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2583,10 +2713,10 @@
        "      <td>11.553054</td>\n",
        "      <td>2.025877</td>\n",
        "      <td>27.81181</td>\n",
-       "      <td>2.774315</td>\n",
-       "      <td>2.968772</td>\n",
-       "      <td>3.048216</td>\n",
-       "      <td>2.827173</td>\n",
+       "      <td>2.774846</td>\n",
+       "      <td>2.968265</td>\n",
+       "      <td>3.048239</td>\n",
+       "      <td>2.826500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -2645,8 +2775,8 @@
       "text/plain": [
        "              Age  Hours per day        BPM     Anxiety  Depression  \\\n",
        "count  658.000000     658.000000  658.00000  658.000000  658.000000   \n",
-       "mean    25.057751       3.048632  122.18541    5.815350    4.738602   \n",
-       "std     11.553054       2.025877   27.81181    2.774315    2.968772   \n",
+       "mean    25.057751       3.048632  122.18541    5.816109    4.740122   \n",
+       "std     11.553054       2.025877   27.81181    2.774846    2.968265   \n",
        "min     10.000000       0.000000   52.00000    0.000000    0.000000   \n",
        "25%     18.000000       2.000000  103.25000    4.000000    2.000000   \n",
        "50%     21.000000       3.000000  120.00000    6.000000    5.000000   \n",
@@ -2655,8 +2785,8 @@
        "\n",
        "         Insomnia         OCD  \n",
        "count  658.000000  658.000000  \n",
-       "mean     3.654255    2.607903  \n",
-       "std      3.048216    2.827173  \n",
+       "mean     3.655015    2.607903  \n",
+       "std      3.048239    2.826500  \n",
        "min      0.000000    0.000000  \n",
        "25%      1.000000    0.000000  \n",
        "50%      3.000000    2.000000  \n",
@@ -2664,7 +2794,7 @@
        "max     10.000000   10.000000  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2678,13 +2808,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Vậy dữ liệu có 7 cột số trong đó có 3 cột số nguyên và 3 cột số thực\n",
+    "- Vậy dữ liệu có 7 cột số nguyên\n",
     "- Tiếp theo, nhóm sẽ tiến hành xem xét các cột chứa dữ liệu không phải số"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2915,7 +3045,7 @@
        "Music effects                  658      3          Improve  491"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2926,7 +3056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
