--- a/5.0-member-reflection.ipynb
+++ b/5.0-member-reflection.ipynb
@@ -52,7 +52,14 @@
     "</b></font>\n",
     "\n",
     "<font size=\"+1\" color=#215C67><b>\n",
-    "- Điền vào đây\n",
+    "- Những điều học được:\n",
+    "    - Các để tự làm một nghiên cứu Khoa học dữ liệu hoàn chỉnh từ bước thu thập dữ liệu, tiền xử lí dữ liệu cho đến khám phá và đặt câu hỏi.\n",
+    "    - Cách làm việc nhóm, tự lên kế hoạch và phân công công việc sao cho phù hợp.\n",
+    "    - Cách sử dụng Github để phối hợp làm nhóm.\n",
+    "- Những khó khăn:\n",
+    "    - Khó tìm được bộ dữ liệu phù hợp với định hướng của nhóm.\n",
+    "    - Bộ dữ liệu có nhiều thuộc tính nhưng trùng tính chất khá nhiều dẫn đến việc khó khai thác sâu để đặt được những câu hỏi có ý nghĩa hơn.\n",
+    "    - Chưa tìm được cách dùng âm nhạc để giải quyết các vấn đề tâm lý như mục địch ban đầu đặt ra cho đồ án.\n",
     "</b></font>\n",
     "\n",
     "\n",
@@ -68,7 +75,7 @@
     "\n",
     "<div style=\"border-radius: 10px; border: 2px solid #51F9F4; padding: 15px; background-color:#c2eeec; font-size: 100%; text-align: left;\">\n",
     "<font color=\"red\"><b>\n",
-    "21120298 - Chiểm Bỉnh Nguyên\n",
+    "21120298 - Chiêm Bỉnh Nguyên\n",
     "</b></font>\n",
     "\n",
     "<font size=\"+1\" color=#215C67><b>\n",
