install_matplotlib_venn

--- a/4.0-questions-and-answers.ipynb
+++ b/4.0-questions-and-answers.ipynb
@@ -17,7 +17,7 @@
     "import re\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# %pip install matplotlib-venn\n",
+    "%pip install matplotlib-venn\n",
     "from matplotlib_venn import venn3\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
