--- a/4.0-questions-and-answers.ipynb
+++ b/4.0-questions-and-answers.ipynb
@@ -817,7 +817,7 @@
     "\n",
     "- Tần suất trung bình  tất cả mọi người với Người Có Mất Ngủ: Những người mất ngủ nghe nhạc video game và Metal với tần suất cao hơn. Điều này có thể chỉ ra rằng họ sử dụng nhạc như một phương tiện để gây ngủ hoặc quản lý căng thẳng liên quan đến tình trạng mất ngủ.\n",
     "\n",
-    "- Tần suất trung bình  tất cả mọi người so với Người Có OCD (Rối Loạn Ám Ảnh Cưỡng Chế): Tần suất nghe nhạc Rap và Pop cao hơn đáng kể ở những người có OCD. Có thể nhịp điệu và tính dự đoán trong các thể loại này h resonates hơn với những người nghe có OCD.\n",
+    "- Tần suất trung bình  tất cả mọi người so với Người Có OCD (Rối Loạn Ám Ảnh Cưỡng Chế) dường như không khác nhau. Do đó khó có thể nhận biết được người bị OCD so với người bình thường.\n",
     "\n",
     "- Xuyên suốt tất cả các biểu đồ, nhạc Gospel thường có tần suất nghe thấp hơn ở những người có các điều kiện này so với dân số tổng thể, có thể cho thấy rằng thể loại này ít được sử dụng hoặc ít hiệu quả như một chiến lược đối phó cho những nhóm cụ thể này.\n",
     "</b></font>\n",
@@ -998,9 +998,9 @@
     "\n",
     "- Người có triệu chứng lo âu và trầm cảm có xu hướng nghe nhạc Rock và Pop nhiều hơn.\n",
     "- Người mất ngủ có xu hướng nghe nhạc video game và Metal nhiều hơn.\n",
-    "- Người có OCD nghe nhạc Rap và Pop nhiều hơn so với mức trung bình.\n",
+    "- Người có OCD tần xuất nghe  không khác gì so với người bình thường \n",
     "\n",
-    "Từ biểu đồ sở thich âm nhạc của những người có triệu chứng bệnh ta thấy: ở thích âm nhạc cá nhân có liên quan đến triệu chứng tâm thần và có thể phản ánh cách thức mà mỗi người đối phó với tình trạng sức khỏe tâm thần của họ. Thể loại Rock và Pop được yêu thích rộng rãi trong tất cả các nhóm, trong khi các thể loại khác như Metal có thể được ưa chuộng bởi những người trải qua trạng thái cảm xúc sâu sắc hơn. Sự đa dạng trong sở thích âm nhạc cho thấy việc lựa chọn âm nhạc để hỗ trợ sức khỏe tâm thần là một trải nghiệm rất cá nhân và cần phải được cá nhân hóa.\n",
+    "- Từ biểu đồ sở thich âm nhạc của những người có triệu chứng bệnh ta thấy: ở thích âm nhạc cá nhân có liên quan đến triệu chứng tâm thần và có thể phản ánh cách thức mà mỗi người đối phó với tình trạng sức khỏe tâm thần của họ. Thể loại Rock và Pop được yêu thích rộng rãi trong tất cả các nhóm, trong khi các thể loại khác như Metal có thể được ưa chuộng bởi những người trải qua trạng thái cảm xúc sâu sắc hơn. Sự đa dạng trong sở thích âm nhạc cho thấy việc lựa chọn âm nhạc để hỗ trợ sức khỏe tâm thần là một trải nghiệm rất cá nhân và cần phải được cá nhân hóa.\n",
     "\n",
     "\n",
     "Biểu đồ về ảnh hưởng của âm nhạc cho thấy:\n",
@@ -1008,7 +1008,7 @@
     "- Có một tỷ lệ nhỏ người cảm thấy tình trạng của họ xấu đi khi nghe nhạc, đặc biệt là ở nhóm người mất ngủ.\n",
     "- Số lượng người không cảm thấy có tác động gì từ âm nhạc cũng khá đáng kể.\n",
     "\n",
-    "=> hững phát hiện này cho thấy âm nhạc có thể đóng vai trò là một công cụ hữu ích trong việc cải thiện tình trạng tâm thần hoặc ít nhất là cung cấp một phương tiện thoải mái và giải trí cho người nghe. Tuy nhiên, cũng có một tỷ lệ nhất định mà âm nhạc không mang lại hiệu quả tích cực hoặc thậm chí có thể làm tình hình tồi tệ hơn, điều này nhấn mạnh tầm quan trọng của việc lựa chọn đúng loại nhạc cho từng cá nhân.\n",
+    "=> Những phát hiện này cho thấy âm nhạc có thể đóng vai trò là một công cụ hữu ích trong việc cải thiện tình trạng tâm thần hoặc ít nhất là cung cấp một phương tiện thoải mái và giải trí cho người nghe. Tuy nhiên, cũng có một tỷ lệ nhất định mà âm nhạc không mang lại hiệu quả tích cực hoặc thậm chí có thể làm tình hình tồi tệ hơn, điều này nhấn mạnh tầm quan trọng của việc lựa chọn đúng loại nhạc cho từng cá nhân.\n",
     "\n",
     "Qua đó, nghiên cứu của bạn đã cung cấp cái nhìn sâu sắc về mối liên hệ giữa âm nhạc và sức khỏe tâm thần, đồng thời cũng phản ánh sự khác biệt về sở thích âm nhạc giữa những người có triệu chứng tâm thần so với dân số chung. Những thông tin này có thể hữu ích cho việc phát triển các chương trình can thiệp sức khỏe tâm thần thông qua âm nhạc hoặc chỉ đơn giản là cung cấp kiến thức cho những người đang tìm cách sử dụng âm nhạc để cải thiện tâm trạng của mình.\n",
     "\n",
@@ -1066,11 +1066,10 @@
     "<div style=\"border-radius: 10px; border: 2px solid #51F9F4; padding: 15px; background-color:#c2eeec; font-size: 100%; text-align: left;\">\n",
     "    \n",
     "<font size=\"+1\" color=#215C67><b>\n",
-    "Các thể loại như Video game music và Jazz có sự phân bố độ tuổi rộng, chỉ ra rằng chúng được nghe bởi một lượng người nghe đa dạng về tuổi tác.\n",
-    "Rock và Pop có nhiều điểm ngoại lệ, cho thấy có người nghe ở độ tuổi cao hơn so với phần lớn người nghe thể loại này.\n",
-    "Thể loại như Classical và Metal có sự phân bố tuổi tương đối hẹp, chỉ ra rằng đối tượng nghe nhạc có xu hướng tập trung vào một nhóm tuổi nhất định.\n",
-    "Lofi và Gospel có những người nghe ở độ tuổi thấp, dựa vào vị trí của hộp và độ rộng của nó.\n",
-    "Latin music dường như có số lượng người nghe ít nhất và có phân bố tuổi hạn chế so với các thể loại khác.\n",
+    "- Các thể loại như Rock, Classical, Metal có sự phân bố độ tuổi rộng, chỉ ra rằng chúng được nghe bởi một lượng người nghe đa dạng về tuổi tác.\n",
+    "- Thể loại như Rap và Kpop có sự phân bố tuổi tương đối hẹp, chỉ ra rằng đối tượng nghe nhạc có xu hướng tập trung vào một nhóm tuổi nhất định.\n",
+    "- Gospel hầu như được nghe mới những những người có độ tuổi tên 55 tuổi\n",
+    "- Latin music dường như có số lượng người nghe ít nhất và có phân bố tuổi hạn chế so với các thể loại khác bởirong khảo sát chỉ ghi nhận được 1 trường hợp thích nghe thể loại nhạc này\n",
     "</b></font>\n",
     "</div>"
    ]
