--- a/4.0-questions-and-answers.ipynb
+++ b/4.0-questions-and-answers.ipynb
@@ -11,7 +11,37 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib-venn in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (0.11.9)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib-venn) (3.8.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib-venn) (1.26.0)\n",
+      "Requirement already satisfied: scipy in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib-venn) (1.11.3)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (1.1.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (4.43.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (23.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (10.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (3.1.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (2.8.2)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from matplotlib->matplotlib-venn) (6.1.0)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib->matplotlib-venn) (3.17.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\admin\\anaconda3\\envs\\min_ds-env\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->matplotlib-venn) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "#import các thứ viện cần thiết\n",
     "import re\n",
@@ -1645,7 +1675,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\huynh\\AppData\\Local\\Temp\\ipykernel_8808\\3452674040.py:2: FutureWarning: \n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_22124\\3452674040.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2007,7 +2037,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\huynh\\AppData\\Local\\Temp\\ipykernel_8808\\3885173726.py:24: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_22124\\3885173726.py:24: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all axes decorations.\n",
       "  plt.tight_layout()\n"
      ]
     },
