--- a/5.0-member-reflection.ipynb
+++ b/5.0-member-reflection.ipynb
@@ -79,7 +79,14 @@
     "</b></font>\n",
     "\n",
     "<font size=\"+1\" color=#215C67><b>\n",
-    "- Điền vào đây\n",
+    "- Những điều học được:\n",
+    "    - Kĩ năng làm nhóm\n",
+    "    - Cách làm một bài nghiên cứu Khoa học dữ liệu hoàn chỉnh\n",
+    "    - Các kiến thức về thống kê, khai thác dữ liệu\n",
+    "    - Cách sử dụng Github\n",
+    "- Những khó khăn:\n",
+    "    - Bộ dữ liệu có nhiều thuộc tính có cùng tính chất, khó đào sâu để khai thác, đặt câu hỏi\n",
+    "    - Vì đây là bộ dữ liệu public, được sử dụng, khai thác bởi nhiều người nên gây khó khăn trong việc tìm hướng đi mới cho nhóm.\n",
     "</b></font>\n",
     "\n",
     "\n",
